--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,8 @@
   --color-background-alt: #f7f7f7;
   --color-background-dark: #121212;
   --color-background-light: #ffffff;
+
+  --font-sans: Lexend, system-ui, sans-serif;
 }
 
 .btn {
