feat: lighten theme colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 @theme {
-  --color-sfu-red: #a6192e;
-  --color-sfu-dark: #231f20;
+  --color-sfu-red: #c2273b;
+  --color-sfu-dark: #3b0c1e;
   --color-background-alt: #f7f7f7;
   --color-background-dark: #121212;
   --color-background-light: #ffffff;
