feat: add save button to selected course list

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,5 +11,8 @@
 }
 
 .btn {
-  @apply bg-sfu-red flex w-full select-none items-center justify-between gap-1 rounded px-4 py-3 text-sm font-bold uppercase tracking-widest text-white transition-all hover:brightness-110;
+  @apply bg-sfu-red flex w-full cursor-pointer select-none items-center justify-between gap-1 rounded px-4 py-3 text-sm font-bold uppercase tracking-widest text-white transition-all hover:brightness-110;
+}
+.btn-secondary {
+  @apply text-sfu-red border-sfu-red/20 hover:bg-sfu-red/10 flex w-full cursor-pointer select-none rounded border px-4 py-3 text-sm font-bold uppercase tracking-widest transition-all;
 }
